<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Partners in Education</string>
    <string name="imageDesc">Logo</string>
    <string name="action_settings">Settings</string>
    <string name="profileButton">Profile</string>
    <string name="toEvents">Events</string>
    <string name="password">Password</string>
    <string name="thankyou">Thank you! \nReturning you to events page.</string>
    <string name="neartestCheckin">Check in to next event!</string>

    <!-- Begin strings for Profile layout -->
    <string name="profileHeader">Profile</string>
    <string name="name">Name</string>
    <string name="phoneLabel">Phone</string>
    <string name="emailLabel">Email</string>
    <string name="addressLabel">Address</string>
    <string name="hours">HOURS</string>
    <string name="hoursRight">hours served for education</string>
    <string name="eventsAt">Events Attended: </string>
    <string name="rank">Rank: </string>
    <!-- End strings for Profile Layout -->


    <!-- Begin strings for Login layout -->
    <string name="loginUsername">Username </string>
    <string name="loginPassword">Password </string>
    <string name="loginButton">Login</string>
    <!-- End strings for Login layout -->

    <!-- Event Details strings -->
    <string name="checkinButton">Check In</string>
    <string name="picHolder">Event Picture Here</string>
    <string name="checkinOn">I\'m here!</string>
    <string name="checkinOff">Done</string>
    <string name="title_activity_current_event">CurrentEventActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- Colors for branding -->
    <color name="white">#FFFFFF</color>
    <color name="pieBlue">#216CB4</color>
    <color name="pieRed">#BD312B</color>
    <color name="pieYellow">#E7C75B</color>

    <!-- Events Strings -->
    <string name="title_activity_eventswipe">Events</string>
    <string name="upcomingTab">Upcoming</string>
    <string name="nextEvent">Upcoming Events</string>
    <string name="pastEvents">Past Events</string>
    <string name="otherEvents">Other Events</string>
    <string name="pastTab">Past</string>
    <!-- End Events Strings section -->
    
    <!--  Info Strings -->
	<string name="infoManager">Your Volunteer Manager</string>
	<string name="yourManager">Ashley Cortez\nVolunteer Manager - West SB\ncce@sbceo.org\n805-xxx-xxxx \ \  ext. xxxx</string>
	<string name="partners">Partners in Education</string>
	<string name="partnersWebsite">http://partners.sbceo.org/</string>
	<string name="coordinator">Lucille Ramirez\nVolunteer Program Coordinator\nlucille@sbceo.org\n805-964-4710 \ \  ext. 4403</string>

    <!-- Unused string but just in case below -->
    <string name="passwordHint">Enter password</string>
    <string name="usernameHint">Enter username</string>
    <string name="gpsOutput">Your GPS Coordinates</string>
    <string name="getGPS">Get Coordinates</string>

</resources>