<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.partnersineducation_eventapp.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/toEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:onClick="toEvents"
        android:text="@string/toEvents" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toEvent"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true" >

        <TextView
            android:id="@+id/profileHours"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="top|center|fill"
            android:layout_marginTop="66dp"
            android:text="@string/hours"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/pieBlue"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hoursRight"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="top|center|fill"
            android:ems="10"
            android:inputType="textMultiLine"
            android:paddingLeft="10dp"
            android:text="@string/hoursRight"
            android:textColor="@color/pieBlue"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameLabel"
        android:layout_below="@+id/nameLabel"
        android:layout_marginTop="26dp"
        android:text="@string/phoneLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneLabel"
        android:layout_below="@+id/phoneLabel"
        android:layout_marginTop="26dp"
        android:text="@string/emailLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailLabel"
        android:layout_below="@+id/emailLabel"
        android:layout_marginTop="26dp"
        android:text="@string/addressLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/vName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/addressLabel"
        android:layout_below="@+id/nameLabel"
        android:maxWidth="200dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/vPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/vName"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/phoneLabel"
        android:maxLines="1"
        android:text="TextView" />

    <TextView
        android:id="@+id/vEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/vName"
        android:layout_alignRight="@+id/vPhone"
        android:layout_below="@+id/emailLabel"
        android:maxLines="1"
        android:maxWidth="150dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/vAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/vEmail"
        android:layout_alignRight="@+id/vEmail"
        android:layout_below="@+id/addressLabel"
        android:lines="2"
        android:text="TextView" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

</RelativeLayout>